Finalización de las actividades HTML y CSS

--- a/ejercicio1/ejercicio1.html
+++ b/ejercicio1/ejercicio1.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="description" content="Ejercicio HTML - Corrige los errores">
         <meta charset="utf-8">
-        <title>Corrige los errores que encuenres en el documento</title>
+        <title> Ejercicio 1 - Corrige los errores que encuenres en el documento</title>
     </head>
     <body>
         <h1>Aprender HTML es muy divertido</h1>
